--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 
           <div class="col-lg-3">
             <div class="pricing-item featured">
-              <h3>WEBSITE INSTITUCIONAL/BLOG</h3>
+              <h3>INSTITUCIONAL / <br> BLOG</h3>
               <div class="icon">
                 <i class="bi bi-info-circle"></i>
               </div>
